<resources>
    <string name="app_name">MyCityCourts</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_name">last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">E-mail</string>
    <string name="show">Show</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add_court">Add_Court</string>
    <string name="order_court">Order Court</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="name">Username</string>
    <string name="mobno">Mobile No.</string>
    <string name="birthdate">Birthdate</string>
</resources>