<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpapermoshe"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tv_Username"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:paddingStart="0dp"
        android:layout_marginStart="0dp"
        android:textColorHint="@color/whiteTextColor"
        android:textColor="#0D93C2"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <com.google.android.material.textfield.TextInputLayout
        android:textColorHint="@color/whiteTextColor"
        android:textColor="#0D93C2"
        android:id="@+id/username_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Username"
        app:layout_constraintVertical_bias="0.00">

        <EditText
            android:textColorHint="@color/whiteTextColor"
            android:textColor="#0D93C2"
            android:layout_marginLeft="-5dp"
            android:layout_marginStart="-5dp"
            android:id="@+id/tv_Password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/reg_centre_button"
        android:onClick="OnLogin"
        android:textColor="@color/whiteTextColor"
        android:scaleType="centerInside"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/reg_centre_button"
        android:onClick="OnRegister"
        android:scaleType="centerInside"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/whiteTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.00"
        style="?android:attr/borderlessButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>